# MedNotice

./: .env.sample  docker-compose.yml  pyproject.toml
app/accounts/: enums.py  managers.py  models.py  serializers.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_alter_customuser_user_type.py  0003_alter_customuser_user_type.py  0004_alter_customuser_user_type.py
app/appointments/: admin.py  enums.py  models.py  permissions.py  serializer.py  urls.py  views.py
app/appointments/migrations/: 0001_initial.py  0002_alter_appointment_cancellation_reason.py  0003_appointment_description.py  0004_appointment_doctor.py
app/appointments/services/: scheduling.py
app/common/: models.py
app/core/: apps.py  celery.py  settings.py  urls.py
app/core/utils/: db.py  utils.py
app/doctor/: models.py  serializers.py  urls.py  views.py
app/doctor/migrations/: 0001_initial.py
app/notification/: services.py  tasks.py
app/patients/: admin.py  models.py  serializers.py  urls.py  views.py
app/patients/migrations/: 0001_initial.py  0002_patient_user.py  0003_patient_allergies_patient_blood_type_and_more.py
docker/dev/: DockerFile
